2002-08-29  Duncan Mak  <duncan@ximian.com>

	* StreamWriter.cs: Set DisposedAlready after calling flush. Fixes
	the build for gtk#.

2002-08-27  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* BinaryReader.cs:
	* BinaryWriter.cs:
	* MemoryStream.cs:
	* StreamReader.cs:
	* StreamWriter.cs:
	* StringReader.cs:
	* StringWriter.cs:
	* TextWriter.cs: IDisposable fixes.

2002-08-24  Miguel de Icaza  <miguel@ximian.com>

	* StreamReader.cs: Removed TODOs, as the code seems to be
	complete. 

	* Path.cs (GetTempFileName): Make this routine atomic by not
	testing and then creating, but using the create call to ensure
	that we own the filename.

2002-08-23  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* FileLoadException.cs: implemented ToString.

	* StreamWriter.cs: added Null field and implemented Write (char) and
	Write (char []).

2002-08-23  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* StreamReader.cs: implemented NullStreamReader.

2002-08-21  Miguel de Icaza  <miguel@ximian.com>

	* Path.cs (GetDirectoryName): Fix for filenames with size = 1

	* File.cs: Removed all references that threw exceptions when the
	paths contains a colon, as this is a valid part of an identifier
	on Unix.

	Everywhere: The String.Empty return from GetDirectoryName means
	that there is no directory information about the path.

2002-08-20  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* FileNotFoundException.cs: use Message and InnerException from base
	class. Changed Message and ToString ().

2002-08-19  Dick Porter  <dick@ximian.com>

	* BinaryWriter.cs: The length of a string is counted in bytes, not
	chars

2002-08-18  Dick Porter  <dick@ximian.com>

	* BinaryReader.cs: Fixed buffering

2002-08-09  Nick Drochak  <ndrochak@gol.com>

	* BinaryReader.cs: added virtual to Dispose(bool).

2002-08-03  Jason Diamond  <jason@injektilo.org>

	* StringWriter.cs: Return UnicodeEncoding for Encoding property.

2002-08-03  Jason Diamond  <jason@injektilo.org>
