@@ -3,14 +3,17 @@
 // System.IO.Path.cs 
 //
 // Copyright (C) 2001 Moonlight Enterprises, All Rights Reserved
+// Copyright (C) 2002 Ximian, Inc. (http://www.ximian.com)
 // 
 // Author:         Jim Richardson, develop@wtfo-guru.com
 //                 Dan Lewis (dihlewis@yahoo.co.uk)
+//                 Gonzalo Paniagua Javier (gonzalo@ximian.com)
 // Created:        Saturday, August 11, 2001 
 //
 //------------------------------------------------------------------------------
 
 using System;
+using System.Runtime.CompilerServices;
 
 namespace System.IO
 {
@@ -35,6 +38,9 @@ namespace System.IO
 				return null;
 			}
 
+			if (path.IndexOfAny (InvalidPathChars) != -1)
+				throw new ArgumentException ("Illegal characters in path", "path");
+
 			int iExt = findExtension (path);
 
 			if (extension != null) {
@@ -53,36 +59,41 @@ namespace System.IO
 			return extension;
 		}
 
-		[MonoTODO]
 		public static string Combine (string path1, string path2)
 		{
-			if (path1 == null || path2 == null)
-			{
-				return null;
-			}
+			if (path1 == null)
+				throw new ArgumentNullException ("path1");
 
-			CheckArgument.Empty (path2);
+			if (path2 == null)
+				throw new ArgumentNullException ("path2");
 
-			// TODO: Check for invalid DirectoryInfo characters
-			//       although I don't think it is necesary for linux
+			if (path1 == String.Empty)
+				return path2;
 
-			// TODO: Verify functionality further after NUnit tests written
-			//		 since the documentation was rather sketchy
+			if (path2 == String.Empty)
+				return path1;
 
+			if (path1.IndexOfAny (InvalidPathChars) != -1)
+				throw new ArgumentException ("Illegal characters in path", "path1");
+
+			if (path2.IndexOfAny (InvalidPathChars) != -1)
+				throw new ArgumentException ("Illegal characters in path", "path2");
+
+			//TODO???: UNC names
+			// LAMESPEC: MS says that if path1 is not empty and path2 is a full path
+			// it should throw ArgumentException
 			if (IsPathRooted (path2))
-			{
-				if (path1.Equals (string.Empty))
-				{
-					return path2;
-				}
-				throw new ArgumentException ("Rooted path");
-			}
+				return path2;
 			
 			string dirSep = new string (DirectorySeparatorChar, 1);
 			string altSep = new string (AltDirectorySeparatorChar, 1);
 			
-			bool b1 = path1.EndsWith (dirSep) || path1.EndsWith (dirSep);
-			bool b2 = path2.StartsWith (dirSep) || path2.StartsWith (altSep);
+			bool b1 = path1.EndsWith (dirSep) ||
+				  path1.EndsWith (dirSep);
+
+			bool b2 = path2 [0] == DirectorySeparatorChar ||
+				  path2 [0] == AltDirectorySeparatorChar;
+
 			if (b1 && b2)
 			{
 				throw new ArgumentException ("Invalid combination");
@@ -120,13 +131,11 @@ namespace System.IO
 		public static string GetExtension (string path)
 		{
 			if (path == null)
-			{
-				return string.Empty;
-			}
+				return null;
 
-			CheckArgument.Empty (path);
-			CheckArgument.WhitespaceOnly (path);
-			
+			if (path.IndexOfAny (InvalidPathChars) != -1)
+				throw new ArgumentException ("Illegal characters in path", "path");
+
 			int iExt = findExtension (path);
 
 			if (iExt > -1)
@@ -138,20 +147,15 @@ namespace System.IO
 
 		public static string GetFileName (string path)
 		{
-			if (path == null)
-			{
-				return string.Empty;
-			}
+			if (path == null || path == String.Empty)
+				return path;
 
-			CheckArgument.Empty (path);
-			CheckArgument.WhitespaceOnly (path);
+			if (path.IndexOfAny (InvalidPathChars) != -1)
+				throw new ArgumentException ("Illegal characters in path", "path");
 
 			int nLast = path.LastIndexOfAny (PathSeparatorChars);
-
 			if (nLast > 0)
-			{
 				return path.Substring (nLast + 1);
-			}
 
 			return nLast == 0 ? null : path;
 		}
@@ -167,6 +171,9 @@ namespace System.IO
 				throw (new ArgumentNullException (
 					"path",
 					"You must specify a path when calling System.IO.Path.GetFullPath"));
+			
+			if (path == String.Empty)
+				throw new ArgumentException ("The path is not of a legal form", "path");
 
 			if (path.StartsWith (new string (DirectorySeparatorChar, 1)) ||
 						path.StartsWith (new string (AltDirectorySeparatorChar, 1)))
@@ -177,13 +184,17 @@ namespace System.IO
 
 		public static string GetPathRoot (string path)
 		{
-			if (path != null || 
-				(path.StartsWith (new string (DirectorySeparatorChar, 1)) ||
-					path.StartsWith (new string (AltDirectorySeparatorChar, 1))))
-			{
-				return path.Substring (0, 1);
-			}
-			return null;
+			if (path == null)
+				return null;
+
+			if (!IsPathRooted (path))
+				return String.Empty;
+
+			int i = path.IndexOfAny (new char [] {DirectorySeparatorChar, AltDirectorySeparatorChar});
+			if (i == -1)
+				return null; // This should never happen, cause IsPathRooted returned true
+
+			return path.Substring (0, i + 1);
 		}
 
 		public static string GetTempFileName ()
@@ -212,12 +223,13 @@ namespace System.IO
 		/// <summary>
 		/// Returns the path of the current systems temp directory
 		/// </summary>
-		[MonoTODO]
 		public static string GetTempPath ()
-		{	// TODO: This might vary with distribution and there
-			//       might be an api to provide it. Research is needed
-			return "/tmp";
+		{
+			return get_temp_path ();
 		}
+
+		[MethodImplAttribute(MethodImplOptions.InternalCall)]
+		private static extern string get_temp_path ();
 
 		public static bool HasExtension (string path)
 		{  
@@ -230,7 +242,16 @@ namespace System.IO
 
 		public static bool IsPathRooted (string path)
 		{
-			return path.StartsWith (new string (VolumeSeparatorChar,1));
+			if (path == null || path.Length == 0)
+				return false;
+
+			if (path.IndexOfAny (InvalidPathChars) != -1)
+				throw new ArgumentException ("Illegal characters in path", "path");
+
+			char c = path [0];
+			return (c == DirectorySeparatorChar 	||
+				c == AltDirectorySeparatorChar 	||
+				(path.Length > 1 && path [1] == VolumeSeparatorChar));
 		}
 
 		// private class methods
