@@ -1,3 +1,8 @@
+2002-08-29  Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* CheckArgument.cs: fixed check for empty string.
+	* Path.cs: various fixes. It passes all the tests in new PathTest.
+
 2002-08-29  Duncan Mak  <duncan@ximian.com>
 
 	* StreamWriter.cs: Set DisposedAlready after calling flush. Fixes
